# workshop

./: .gitattributes  .gitignore  CMakeLists.txt  Doxyfile  FindZLIB.cmake  README.md
app/: CMakeLists.txt  mainwindow.cpp  mainwindow.ui
doc/: defines.md  design.md  lessons_learned.md  techniques.md
doc/analysis/: matrix.md
doc/design/: filter_factory.md  gaussian_kernel.md  images.md  kernel.md  process_functions.md  zephyr_filter_tool.md
doc/design/diagram/: filter_factory.puml  kernel_class_hierarchy.puml  zephyr_filter_tool_state_machine.puml
doc/design/matrix/: overview.md
doc/design/matrix/deprecated/: matrix_class_hierarchy.puml  overview.md
doc/diagram/: kernel_class_hierarchy.puml
doc/tools/: filter.md  play.md  zephyr_filter.md
filter_runner/: CMakeLists.txt  main.cpp
filters/: CMakeLists.txt  gaussian.cpp  gaussian.h
filters/include/: gaussian.h
filters/src/: CMakeLists.txt  Gaussian_test.cpp  gaussian.cpp
image/include/: Image.h  TestImages.h  basic.h
image/src/: CMakeLists.txt  TestImages.cpp  TestImages_test.cpp  basic.cpp
include/: optimize_flags.h
include/filter/: ImageKernel.h  Kernel.h  gaussian.h  operations.h
include/filter/versions/: gaussian_v0.h  gaussian_v1.h  gaussian_v2.h  gaussian_v3.h  gaussian_v4.h
include/framework/: Filter.h  FilterFactory.h  FilterFast.h  IFilter.h
include/image/: Image.h  TestImages.h  patterns.h
include/math/: Matrix.h  SimpleMatrix.h
include/util/: CImg_workaround.h  File.h  PerformanceTest.h  statistics.h  string.h
include/utils/: File.h  statistics.h
libs/CImg/: README.txt
runner/: CMakeLists.txt  main.cpp
runner/src/: CMakeLists.txt  main.cpp
src/filter/: CMakeLists.txt  Gaussian_test.cpp  Kernel.cpp  gaussian.cpp  gaussian_test.cpp  operations.cpp  operations_test.cpp
src/filter/versions/: gaussian_v0.cpp  gaussian_v1.cpp  gaussian_v2.cpp  gaussian_v3.cpp  gaussian_v4.cpp
src/framework/: CMakeLists.txt  FilterFactory.cpp
src/image/: CMakeLists.txt  Image.cpp  TestImages.cpp  TestImages_test.cpp  patterns.cpp  patterns_test.cpp
src/math/: CMakeLists.txt  Matrix.cpp
src/util/: CMakeLists.txt  PerformanceTest.cpp  statistics.cpp  statistics_test.cpp  string.cpp
src/utils/: PerformanceTest.cpp  statistics_test.cpp
stm/: .cproject  .mxproject  .project  Embedded Filter.ioc  Embedded Filter.launch  STM32F750N8HX_FLASH.ld  STM32F750N8HX_RAM.ld  mx.scratch
stm/Core/Inc/: main.h  stm32f7xx_hal_conf.h
stm/Core/Src/: image_data.cpp  main.c  main.cpp  stm32f7xx_hal_msp.c
tools/filter/: CMakeLists.txt  config.h  main.cpp  options.cpp  options.h
tools/generate/: CMakeLists.txt  main.cpp  options.cpp  options.h
tools/play/: CMakeLists.txt  main.cpp
tools/zephyr_filter/: CMakeLists.txt  README.md  prj.conf
tools/zephyr_filter/src/: main.cpp
utils/: CMakeLists.txt
utils/include/: PerformanceTest.h  statistics.h
utils/src/: PerformanceTest.cpp  statistics_test.cpp
